<resources>
    <string name="app_name">Pop Movies</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="erro_name_bad_format">Name with bad format</string>
    <string name="erro_email_bad_format">E-mail with bad format</string>
    <string name="erro_password_bad_format">Password with bad format</string>
    <string name="success_authentication">Successful authentication</string>
    <string name="erro_authentication">Authentication failed</string>
    <string name="success_signup">Successful signup</string>
    <string name="erro_signup">Signup failed</string>
    <string name="tag">popmovies</string>
    <string name="title_main_activity">Movies List</string>
    <string name="favorites">Favorites</string>
    <string name="most_popular">Popular Movies</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close_app">Close PopMovies App</string>
    <string name="close_app_ask">Do you want to close the app?</string>
    <string name="no_favorites_movie">You do not have favorite movies</string>
</resources>
